--- a/style.css
+++ b/style.css
@@ -847,6 +847,7 @@ img.hover-shadow {
     max-width: 1200px;
 
 }
+#unterricht .mehrinfo,
 #termine .mehrinfo,
 #past .mehrinfo {
     padding: 10px; 
