--- a/media.css
+++ b/media.css
@@ -46,6 +46,7 @@
 }
 	/* Media Query For Medium Tablets */
 	@media only screen and (min-width: 992px) and (max-width: 1199px) {
+		
 		#home .home {
 			padding-top: 600px;
 		}
@@ -53,17 +54,21 @@
 			padding-bottom: 20px;
 			padding-top: 30px;
 		}
-		#header .brand h1 {
+		#header h1 {
 			display: none;
 		}
-		#header .brand .logo {
+		#header .logo {
 			display: block;
 			font-weight: bold;
 			font-size: 40px;
 			padding-left: 20px;
-			top: 20px;left: 0;
+			top: 40px;left: 0;
 			position: fixed;
-		}		
+			color: red;
+		}	
+		.instrument {
+			font-size: 45px;
+		}	
 		.container {
 			flex-direction: column;
 		}
@@ -114,7 +119,15 @@
 		.news-projectbox {
 			width: 900px;
 		}
-		#kontakt .projectbox {
+		.column {
+			width: 300px;
+			height: 300px;
+		  }
+		.column img:hover {
+			  opacity: .5;
+			  width: 400px;
+		}
+		#kontakt .container {
 			flex-direction: row;
 			max-width: 1199px;
 		}
@@ -334,7 +347,6 @@
 	#media .row { 
 		display: grid;
 		grid-template-columns: repeat(1,1fr);
-
 	}
 	#termine .upcoming_list {
 		grid-template-columns: repeat(1,1fr);
