--- a/style.css
+++ b/style.css
@@ -853,7 +853,6 @@ img.hover-shadow {
     margin-left: -12px;
     margin-bottom: 60px;
 }
-
 .vergangens{
     width: fit-content;
     height: auto;
@@ -894,10 +893,19 @@ img.hover-shadow {
     opacity: 0;
     z-index: -1;
 }
-#termine .concert {
+.concert {
     width: fit-content;
     height: auto;
     background-color:var(--main-color);
+    color: var(--secondary-color);
+    padding:5px 10px;
+    text-transform: uppercase;
+    margin: 10px 0px;
+}
+.concert-past {
+    width: fit-content;
+    height: auto;
+    background-color:black;
     color: var(--secondary-color);
     padding:5px 10px;
     text-transform: uppercase;
@@ -947,34 +955,11 @@ select {
 #past .past_list {
     max-width:auto;
 }
-#past li {
-    padding-bottom: 20px;
-}
+
 #year2023, #year2022 {
     max-width: 800px;
     padding: 50px;
 }
-
-.archive {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    width: 180px;
-    height: 52px;
-    text-transform: uppercase;
-    background-color: var(--main-color);
-    margin: 0 auto;
-    border-radius: 30px;
-    transition: all .3s ease-out;
-    color: var(--secondary-color);
-    text-decoration: none;
-    margin-bottom: 50px;
-}
-.archive:hover {
-    background-color: var(--whitesmoke);
-}
-
 .scroll-to-top {
     position: fixed;
     bottom: 20px;
