--- a/news/style.css
+++ b/news/style.css
@@ -222,103 +222,7 @@ img {
     font-weight: bold;
 }
 
-/* about Section */
-#about .about {
-	max-width: 1400px;
-	margin: 0 auto;
-    display: flex;
-        align-items: center;
-        justify-content: center;
-}
-.check {
-    position: relative;
-    width: 60px;
-    height: 20px;
-    display: inline-flex;
-    align-items: center;
-}
-.check:before {
-    content: "";
-    position: absolute;
-    width: 60px;
-    height: 25px;
-    background: black;
-    border-radius: 25px;
-}
-.check:checked:before {
-    background-color: var(--main-color);
-}
-.check:after {
-    content: "";
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    background: white;
-    border: 2px solid black;
-    border-radius: 10px;
-    transition: 0.5s;
-    box-sizing: border-box;
-}
-.check:checked:after {
-    left: 35px;
-    border: 2px solid black;
-}
-.check:checked ~ .content.content-en {
-    display: none;
-}
-.check:checked ~ .content.content-de {
-    display: block;
-}
-.text-column {
-    flex: 1;
-    text-align: justify;
-    padding: 40px;
-    font-size: 20px;
-    font-weight:lighter;
-}
-.content {
-    display: none;
-}
-.content.content-en {
-    display: block;
-    padding-top: 20px;
-}
-.content.content-de {
-    padding-top: 20px;
-}
-#about .about-bottom {
-    margin-top: 200px;
-    margin-right: 40px;
-}
-#about .swiper .mySwiper{
-    position: relative;
-    margin: auto;
-    width: auto;
-    height:auto;
-}
-#about .swiper {
-    width: 700px;
-    height: auto;
-}
-#about .swiper-slide {
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#about .swiper-pagination .swiper-pagination-bullet {
-    width: 15px;
-    height:15px;
-    background:white;
-    opacity: 1;
-    margin-bottom: 30px;
-}
-#about .swiper-pagination .swiper-pagination-bullet-active {
-    opacity: 1;
-    background: var(--main-color);
-}
+
 .autoplay-progress {
     position: absolute;
     right: 16px;
@@ -358,98 +262,7 @@ img {
     opacity: 1;
     background: var(--main-color);
 }
-#about .download {
-    display: flex;
-    text-decoration: none;
-    background-color:white;
-    color: black;
-    border: 2px solid black;
-    margin-top: 20px;
-    width: 150px;
-    align-items: center;
-    justify-content: center;
-    padding: 10px;
 
-  }
-#about .download:hover {
-    background-color:black;
-    color: #ffffff;
-  }
-/* End about Section */
-
-/* projekte */
-#projekte .projekte {
-	flex-direction: column;
-	max-width: 1400px;
-	margin: 0 auto;
-}
-#projekte .projectbox {
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    align-items: center;
-    justify-content: center;
-    padding-bottom: 50px;
-    
-}
-#projekte .container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.box {
-    width: 450px;
-    height: 450px;
-    background-color: white;
-    color: white;
-    text-align: center;
-    transition: .3s ease-in-out;
-    overflow: hidden;
-    position: relative;
-	margin: 10px;
-}
-
-.img1{
-    object-position: top;
-}
-.img2{
-    object-position: 70%;
-    filter: grayscale(100%);
-}
-.img3 {
-    object-position: 50%;
-}
-.img4 {
-    object-position: 63% ;
-}
-.img5 {
-    object-position: 22%;
-}
-.card-body {
-    width: 100%;
-    height: 100%;
-    bottom: -100%;
-    position: absolute;
-    background:white;
-    font-size: 20px;
-    font-weight: 100;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    transition: 1s ease;
-    color: black;
-}
-.box:hover .card-body{
-    bottom: 0;
-}
-
-#discographie .mehrinfo,
-#projekte .mehrinfo {
-    bottom: 50px;
-  }
-
-
-/* End projekte section */
 
 /* projekte categories */
 .projectbox {
@@ -519,32 +332,7 @@ img {
 .no-border {
     border: none;
 }
-#triofussissimo .socials a {
-    color: black;
-}
-#triofussissimo .socials i {
-    font-size: 25px;
-}
-/* projekte categoreis end */
 
-/* disco*/
-#discographie .discographie {
-	flex-direction: column;
-	max-width: 1400px;
-	margin: 0 auto;
-}
-#discographie .projectbox {
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    align-items: center;
-    justify-content: center;
-    padding-bottom: 50px;
-}
-#discographie .container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
 /* news */
 #news .news{
     max-width: 1400px;
@@ -580,6 +368,7 @@ img {
     height: 300px;
     margin-bottom: 10px;
     border-radius: 5px;
+    filter: grayscale(100%);
 }
 #news .date {
     color: #888;
@@ -670,181 +459,19 @@ img {
     text-decoration: none;
     color: black;
 }
-/* news end */
-#media {
-	max-width: 1000px;
-    height: auto;
-    margin: 0 auto;
-}
-#media .info {
-    padding-left: 80px;
-    font-size: 20px;
-    letter-spacing: 0.2px;
-}
-.row { 
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    justify-items: center; /* Center items horizontally */
-    align-items: center; 
-    margin-bottom: 100px;
-}
-.column {
-  width: 350px;
-  height: 350px;
-  overflow: hidden;
-}
-.column img {
-    width: 350px;
-    object-position: top;
-    filter: grayscale(100%);
-    opacity: 1;
-    -webkit-transition: .3s ease-in-out;
-    transition: .3s ease-in-out;
-    margin:20px;
-  }
-  .column img:hover {
-    opacity: .5;
-    width: 400px;
-  }
-/* The Modal (background) */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 200px;
-  left: 0;
-  top: 0;
-  width: 100vw;
-  height: 100vh;
-  overflow: auto;
-  background-color: black;
-  justify-items: center; /* Center items horizontally */
-  align-items: center; 
-}
-/* Modal Content */
-.modal-content {
-  position: relative;
-  margin: auto;
-  padding: 0;
-  max-width: 800px;
-}
 
-/* The Close Button */
-.close {
-  color: red;
-  position: absolute;
-  top: 110px;
-  right: 25px;
-  font-size: 35px;
-  font-weight: bold;
-}
-.close:hover,
-.close:focus {
-  color: #999;
-  text-decoration: none;
-  cursor: pointer;
-}
-.mySlides {
-  display: none;
-  height:auto;
-  object-fit: none;
-}
-.cursor {
-  cursor: pointer;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: white;
-  font-weight: bold;
-  font-size: 20px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  -webkit-user-select: none;
-}
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 12px;
-  position: absolute;
-  top: 0;
-}
-img {
-  margin-bottom: -4px;
-}
-.demo {
-  opacity: 0.6;
-}
-.active,
-.demo:hover {
-  opacity: 1;
-}
-img.hover-shadow {
-  transition: 0.3s;
-}
-.hover-shadow:hover {
-  box-shadow: 0 20px 15px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-/* media end */
-
-
-/* termine */
-#termine {
-    width: 100%;
-    height: auto;
-    letter-spacing: 2px;
-}
-#termine .section-title {
-    padding-left: 10px;
+#joschostephan .autoplay-progress {
     color: var(--main-color);
 }
-#termine .info,
-#past .info {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-}
-#termine .info a {
-    color:whitesmoke;
-}
-#termine .info a:hover {
-    color:var(--main-color);
-}
-#termine .projectbox,
-#past .projectbox {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
+
 #termine .upcoming_list {
     display: grid;
     grid-template-columns: repeat(2,1fr);
     max-width: 1200px;
 
 }
-#unterricht .mehrinfo,
-#termine .mehrinfo,
-#past .mehrinfo {
+.mehrinfo
+{
     padding: 10px; 
     position: relative; 
     bottom: 0px;
@@ -925,164 +552,3 @@ img.hover-shadow {
 .year {
     padding-bottom: 20px;
 }
-select {
-    padding: 10px;
-    font-size: 15px;
-    border: 2px solid black;
-    background-color: #fff;
-    color: #333;
-    appearance: none; /* Remove default arrow in some browsers */
-    -webkit-appearance: none; /* Remove default arrow in older WebKit browsers */
-    -moz-appearance: none; /* Remove default arrow in older Firefox */
-}
-#past {
-    width: 100%;
-    height: auto;
-    color: black;
-}   
-#past .back {
-    margin-top: 90px;
-    margin-right: 10px; /* Adjust the margin as needed */
-    float: right;
-}
-#past .section-title {
-    padding-left: 10px;
-    color: var(--whitesmoke);
-}
-#past .past_list {
-    max-width:auto;
-    letter-spacing: 2px;
-}
-
-#year2023, #year2022 {
-    max-width: 800px;
-    padding: 50px;
-}
-.scroll-to-top {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    padding: 10px;
-    background-color: #000000;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-.highlight {
-    background-color: rgb(255, 225, 0);
-    font-weight: bold;
-  }
-
-/* termine end */
-
-
-/* kontakt Section */
-
-#kontakt .kontakt {
-	display: flex;	
-	max-width: 1200px;
-	margin: 10px auto;
-	width: 90%;
-}
-#kontakt .container {
-	display: flex;
-}
-#kontakt .section-title {
-    color: #000000;
-}
-#kontakt img {
-    width: 700px;
-}
-#kontakt .col-left,
-#kontakt .col-right {
-    letter-spacing: 2px;
-    color: white;
-    display: flex;
-    height: auto;
-}
-#kontakt .col-left {
-    align-items: center;
-    justify-content: center;
-}
-#kontakt .col-right {
-    background-color: #000000;
-    flex-direction: column;
-    align-items:start;
-}
-#kontakt .col-right p {
-    padding-top: 8px;
-}
-.contact-name {
-    font-size: 130px;
-}
-.socials {
-    list-style: none;
-    display: flex;
-    margin: 1rem 0 3rem 0;
-}
-.socials li {
-    margin-right: 20px;
-}
-#kontakt a,
-.socials a {
-    text-decoration: none;
-    color: white;
-    cursor: pointer;
-}
-.socials a:hover i {
-    color: var(--main-color);
-    transition: color .4s ease;
-}
-.footer {
-    color: white;
-    display: flex;
-    font-weight: light;
-    padding-top: 150px;
-    font-size: 15px;
-    text-transform: uppercase;
-}
-#privacypolicy .info {
-    font-size: 15px;
-}
-#privacypolicy h3 {
-  text-align: center;
-}
-
-/*End kontakt Section */
-
-
-/* Keyframes */
-@keyframes hamburger_puls {
-	0% {
-		opacity: 1;
-		transform: scale(1);
-	}
-	100% {
-		opacity: 0;
-		transform: scale(1.4);
-	}
-}
-@keyframes text_reveal_box {
-	50% {
-		width: 100%;
-		left: 0;
-	}
-	100% {
-		width: 0;
-		left: 100%;
-	}
-}
-@keyframes text_reveal {
-	100% {
-		color: white;
-	}
-}
-@keyframes text_reveal_name {
-	100% {
-		color: var(--main-color);
-		font-weight: 500;
-	}
-}
-/* End Keyframes */
-
