--- a/news/style.css
+++ b/news/style.css
@@ -343,7 +343,8 @@ img {
     align-items: flex-start; /* Align items at the start of the cross axis (top) */
     justify-content: space-between; 
 }
-#kinderkonzert-readmore .youtube {
+#kinderkonzert-readmore .youtube,
+#solo-readmore .youtube {
     width:100%; 
     height:720px;
 }
